# py-dxva

./: README.md  build.py  setup.bat
python/: test.py
python/vadef/: base.py  common.py  enum.py
src/: CMakeLists.txt  profile.cpp  profile.h  pydxva.cpp  test.cpp
